# parallel-mandelbrot-compute

./: CMakeLists.txt  README.md
attachments/: raw_data.tar  results.xlsx
src/: mpi.cpp  pthread.cpp
